--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,65 +13,60 @@ TABLE OF CONTENTS:
 */
 /* 1. Main Layout ================================= */
 * {
-    box-sizing: border-box; }
+  box-sizing: border-box; }
 
 html, body {
-    height: 100%;
-    width: 100%; }
+  height: 100%;
+  width: 100%; }
 
 #footer {
-    position:fixed;
-    height: 50px;
-    display:block;
-    width: 100%;
-    background: #333;
-    z-index:9;
-    text-align:center;
-    color: #f2f2f2;
-    padding: 20px 0 0 0;
-    bottom:0px;
-}
-
+  position: fixed;
+  height: 50px;
+  display: block;
+  width: 100%;
+  background: #333;
+  z-index: 9;
+  text-align: center;
+  color: #f2f2f2;
+  padding: 20px 0 0 0;
+  bottom: 0px; }
 
 #slide1 {
-    background-image: url(../img/moana.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-}
+  background-image: url(../img/moana.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center; }
+
 .img-left {
-    background-image: url(../img/moana1.jpg);
-    background-size: cover;
-    background-position: 0%;
-}
+  background-image: url(../img/moana1.jpg);
+  background-size: cover;
+  background-position: 0%; }
 
 .img-right {
-    background-image: url(../img/moana2.jpg);
-    background-size: cover;
-    background-position: 0%;
-}
+  background-image: url(../img/moana2.jpg);
+  background-size: cover;
+  background-position: 0%; }
 
 .img-left2 {
-    background-image: url(../img/henna1.jpg);
-    background-size: cover;
-    background-position: 0%;
-}
+  background-image: url(../img/henna1.jpg);
+  background-size: cover;
+  background-position: 0%; }
 
 .img-right2 {
-    background-image: url(../img/henna2.jpg);
-    background-size: cover;
-    background-position: 0%;
-}
+  background-image: url(../img/henna2.jpg);
+  background-size: cover;
+  background-position: 0%; }
 
 .img-left3 {
-    background-image: url(../img/jasmine1.jpg);
-    background-size: cover;
-    background-position: 0%;
-}
+  background-image: url(../img/jasmine1.jpg);
+  background-size: cover;
+  background-position: 0%; }
 
 .img-right3 {
-    background-image: url(../img/jasmine2.jpg);
-    background-size: cover;
-    background-position: 0%;
-}
+  background-image: url(../img/jasmine2.jpg);
+  background-size: cover;
+  background-position: 0%; }
+
+/*# sourceMappingURL=main.css.map */
+
 /*# sourceMappingURL=main.css.map */
